fix navbar not showing on mobile

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -9,7 +9,7 @@ body{
 }
 
 .navbar {
-    padding: 0.50rem 0;
+    /* padding: 0.50rem 0; */
     font-size: 1rem;
 }
 
